Game: Background, player, bullets, enemy, life: CREATED and working. CSS first step DONE

--- a/index.html
+++ b/index.html
@@ -9,15 +9,21 @@
     <title>Document</title>
 </head>
 <body>
-    <canvas id="canvas" width="800" height="500"></canvas>
-    <div>
-        <button id="btn">PLAY</button>
+    <div>  
+        <img id = "logo" src="/img/MonsterDash_logo.png" alt="">
+    </div>
+    <canvas id="canvas" width="800" height="350"></canvas>
+    
+    <div id="btn">
+        <div>START</div>
     </div>
     <script src="js/constants.js"></script>
-    <script src="js/score.js"></script>
+    <!-- <script src="js/score.js"></script> -->
+    <script src="js/life.js"></script>
     <script src="js/background.js"></script>
-    <script src="js/enemy.js"></script>
+    <script src="js/bullet.js"></script>
     <script src="js/player.js"></script>
+    <script src="js/enemy.js"></script>
     <script src="js/game.js"></script>
     <script src="js/index.js"></script>
 </body>
