--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="js/background.js"></script>
     <script src="js/bullet.js"></script>
     <script src="js/player.js"></script>
+    <script src="js/pumpkin.js"></script>
     <script src="js/enemy.js"></script>
     <script src="js/game.js"></script>
     <script src="js/index.js"></script>
