--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
     <div>  
         <img id = "logo" src="/img/MonsterDash_logo.png" alt="">
     </div>
+    <!-- <div id="score">
+        <p>Score: 0</p>
+    </div> -->
     <canvas id="canvas" width="800" height="350"></canvas>
     
     <div id="btn">
         <div>START</div>
     </div>
+    
     <script src="js/constants.js"></script>
-    <!-- <script src="js/score.js"></script> -->
+    <script src="js/score.js"></script>
     <script src="js/life.js"></script>
     <script src="js/background.js"></script>
     <script src="js/bullet.js"></script>
