added restart button and all the sounds volume set

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <div id="btn">
         <div>START</div>
     </div>
+
+    <div id="btn-restart">
+        <div>RESTART</div>
+    </div>
     
     <script src="js/constants.js"></script>
     <script src="js/score.js"></script>
